Prevent map gen option value components from stretching vertically

--- a/css/main.less
+++ b/css/main.less
@@ -4353,7 +4353,7 @@ button.player-setup-remove-player
 
 .map-gen-option-value
 {
-  margin: 0 1em;
+  margin: auto 1em;
   flex: 0 0 65px;
   width: 65px;
 }
